Vertex Connect creates extra face when cutting through non-planar NGon. #40162

Closed
opened 2014-05-12 17:01:22 +02:00 by Jonathan Williamson · 8 comments

System Information
Mac OS 10.9.2

Blender Version
Broken: 2.70 70303df

Short description of error
When using Vertex Connect to connect two vertices on opposing sides of a non-planar NGon an extra face is created:
Screen_Shot_2014-05-12_at_9.55.21_AM.png

Screen_Shot_2014-05-12_at_9.55.25_AM.png

This is incorrect, as the bottom NGon is now covering the whole side, and the newly created face is overlapping the NGon. What it should do is produce this:
Screen_Shot_2014-05-12_at_9.58.26_AM.png

Exact steps for others to reproduce the error

  1. Open attached .blend
  2. Press J to connect selected verts.
  3. Note overlapping faces.

Interesting Note:
If you connect both sets of vertices in the attached .blend, at the same time, then it works. If you connect them individually then it fails.
Screen_Shot_2014-05-12_at_10.00.56_AM.png

Download .blend: http://cl.ly/VUEJ

**System Information** Mac OS 10.9.2 **Blender Version** Broken: 2.70 70303df **Short description of error** When using Vertex Connect to connect two vertices on opposing sides of a non-planar NGon an extra face is created: ![Screen_Shot_2014-05-12_at_9.55.21_AM.png](https://archive.blender.org/developer/F88656/Screen_Shot_2014-05-12_at_9.55.21_AM.png) ![Screen_Shot_2014-05-12_at_9.55.25_AM.png](https://archive.blender.org/developer/F88658/Screen_Shot_2014-05-12_at_9.55.25_AM.png) This is incorrect, as the bottom NGon is now covering the whole side, and the newly created face is overlapping the NGon. What it **should** do is produce this: ![Screen_Shot_2014-05-12_at_9.58.26_AM.png](https://archive.blender.org/developer/F88660/Screen_Shot_2014-05-12_at_9.58.26_AM.png) **Exact steps for others to reproduce the error** 1. Open attached .blend 2. Press **J** to connect selected verts. 3. Note overlapping faces. *Interesting Note:* If you connect both sets of vertices in the attached .blend, at the same time, then it works. If you connect them individually then it fails. ![Screen_Shot_2014-05-12_at_10.00.56_AM.png](https://archive.blender.org/developer/F88662/Screen_Shot_2014-05-12_at_10.00.56_AM.png) **Download .blend:** http://cl.ly/VUEJ
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Jonathan Williamson 2014-05-12 17:01:22 +02:00
Author
Member

Added subscriber: @JonathanWilliamson

Added subscriber: @JonathanWilliamson

This issue was referenced by dd8a9eee3b

This issue was referenced by dd8a9eee3b403e91543e358b2ecffd40d3adaa6b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dd8a9eee3b.

Closed by commit dd8a9eee3b.

@JonathanWilliamson

Fixed, but some notes - since your involved in this area.

Having only 2 vertices selected means you can always connect vertices in a face, aka I know what I'm doing mode :),
This is needed because you can have some really messed up ngons (degenerate), and connecting them is a way to cleanup the geometry.
See the image linked from this report: #39418

However the change for #39418 caused this bug.

I've changed the behavior so that connecting 2 vertices will still always work, however now it will only split the best ngon, and leave others. This means if you have some concave ngon surrounding a face (as with this report), it wont split the concave part unless no other options exist.

(Hope this makes sense)

@JonathanWilliamson Fixed, but some notes - since your involved in this area. Having only 2 vertices selected means you can **always** connect vertices in a face, aka *I know what I'm doing* mode :), This is needed because you can have some really messed up ngons (degenerate), and connecting them is a way to cleanup the geometry. See the image linked from this report: #39418 However the change for #39418 caused this bug. I've changed the behavior so that connecting 2 vertices will still always work, however now it will only split the **best** ngon, and leave others. This means if you have some concave ngon surrounding a face (as with this report), it wont split the concave part unless no other options exist. (Hope this makes sense)
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member

Good stuff @ideasman42, thanks for the quick fix. It seems to work very well now.

Good stuff @ideasman42, thanks for the quick fix. It seems to work very well now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40162
No description provided.