Fix T40162: Vert connect creates extra face cutting across concave NGon.

We need to support cutting degenerate ngons, see: T39418
This commit disallows cuts across faces where the same vertices can create better cuts on different faces.